fixed UI bug when uploading
- fixed loading bar not showing when uploading

--- a/.smartlister/css/main.css
+++ b/.smartlister/css/main.css
@@ -697,7 +697,7 @@ body {
 
 .files-container .item .progress {
   position: absolute;
-  top: 52px;
+  top: 48px;
   left: 0;
   height: 6px;
   background-color: rgba(128,216,255, .88);
